AmicarDP/src/objects/et4ae5__JB_Event__e.object
<CustomObject>
    <fields>
        <fullName>et4ae5__FutureContext__c</fullName>
        <label>FutureContext</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__IdList__c</fullName>
        <label>IdList</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Journey Builder Event</label>
    <pluralLabel>Journey Builder Events</pluralLabel>
</CustomObject>